...
    case normal, email, password, confirm
}

fileprivate enum Constants {
    enum Text {
        static let signUpTitle = "Sign Up"
        static let signUp = "Create a new account"
        
        static let enterEmailLabel = "Enter your email address:"
        static let createPasswordLabel = "Create a password:"
        static let confirmPasswordLabel = "Confirm your password:"
        
        static let haveAccountMessage = "Do you already have an account?"
        static let passwordsDoNotMatch = "Passwords do not match."
        static let allFieldsRequired = "All fields are required."
        static let emailErrorMessage = "Please enter a valid email address."
        
        static let emailPlaceholder = "Email"
        static let passwordPlaceholder = "Password"
        
    }
    
    enum Layout {
        static let unlimitedNumberOfLines: Int = 0
...
    
    enum Duration {
        static let switchModeAnimation: CGFloat = 0.25
    }
    
    enum ValidationMessages {
        static let minLength = "6+ characters"
        static let hasLowercase = "1+ lowercase"
        static let hasUppercase = "1+ uppercase"
        static let noWhitespaces = "No whitespaces"
        static let hasDigit = "1+ digit"
        static let onlyLatin = "Only Latin letters"
        static let hasSpecialChar = "1+ special char"
...
