...

fileprivate enum Constants {
    enum Text {
        static let title = "Forgot password"
        static let emailPlaceholder = "Email"
        static let message = "If this email exists, we sent you a password reset link to %@.\n\nPlease check your inbox."
        static let backButtonTitle = "Back to Login"
    }
    
    enum Layout {
        static let unlimitedNumberOfLines: Int = 0
    }
}
...
